# tuw_airskin

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: AirSkinColorNodelet.cfg  AirSkinControlNodelet.cfg  airskin.yaml  airskin_control.yaml
include/airskin_nodelet/: AirSkinControlNodelet.h  AirSkinNodelet.h  AirSkinPad.h  AirSkin_Sense.h  Except.h  I2C_Master.h  I2C_Master_Devantech.h  I2C_Master_Devantech_ISS.h  I2C_Master_MPSSE.h  I2C_Slave.h  PressureSensor_BMP085.h  kbhit.h
include/tuw_airskin/: AirSkinColorNodelet.h  AirSkinControlNodelet.h  AirSkinNodelet.h  AirSkinPad.h  AirSkin_Sense.h
include/tuw_i2c/: I2C_Master_Devantech.h  I2C_Master_Devantech_ISS.h  I2C_Master_MPSSE.h  I2C_Slave.h
launch/: airskin_node.launch  airskin_nodelet.launch
scripts/: color_gradient.py
src/: AirSkinColorNode.cpp  AirSkinColorNodelet.cpp  AirSkinControlNode.cpp  AirSkinControlNodelet.cpp  AirSkinNodelet.cpp  AirSkinPad.cpp  AirSkin_Sense.cc  Except.cc  I2C_Master.cc  I2C_Master_Devantech.cc  I2C_Master_Devantech_ISS.cc  I2C_Master_MPSSE.cpp  I2C_Slave.cc  kbhit.cc
src/tuw_airskin/: AirSkinColorNodelet.cpp  AirSkinControlNodelet.cpp  AirSkinNode.cpp  AirSkinNodelet.cpp  AirSkinPad.cpp  AirSkin_Sense.cc
src/tuw_i2c/: Except.cc  I2C_Master.cc  I2C_Master_Devantech.cc  I2C_Master_Devantech_ISS.cc  I2C_Slave.cc  kbhit.cc
