<?xml version="1.0"?>
<package>
  <name>tuw_airskin</name>
  <version>0.0.0</version>
  <description>The tuw_airskin package</description>

  <maintainer email="klaus.buchegger@tuwien.ac.at">Klaus Buchegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tuw_airskin_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tuw_airskin_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
